# PipelineRunner

./: .gitignore  README.md  README_NEW.md  TODO  main.py  pyproject.toml  rundeck-slow-queries.json
config/: runs-for-dev.json  runs-for-prd.json  runs-for-stg.json  test-runs.json
examples/: ambev-engenharia-cloud-hoop-prd-agents-for-dev.json  ambev-engenharia-cloud-hoop-prd-agents-for-prd.json  ambev-engenharia-cloud-hoop-prd-agents-for-stg.json  ambev-engenharia-cloud-hoop-stg-agents.json  batch-execution.json  get_pipeline_run_response.json  multi-environment.json  simple-runner.json  trigger_pipeline_response.json
pipelinerunner/: config.py  main.py  runner.py
pipelinerunner/commands/: main.py  run.py  template.old  template.py
pipelinerunner/pipeline/: api.py  execution.py  parser.py  pipeline_batch.py  pipeline_execution.py  pipeline_executor.py  pipeline_mode.py
pipelinerunner/repository/: base.py  on_disk.py
pipelinerunner/runner/: runner_executor.py  runner_exporter.py  runner_model.py  runner_repository.py  runner_repository_factory.py  runner_repository_on_disk.py  runner_serializer.py  runner_validator.py
pipelinerunner/template/: parameter_parser.py  parameter_parser.py.old  template_model.py  template_parser.py  template_repository.py  template_repository_factory.py  template_repository_on_disk.py  template_serializer.py
pipelinerunner/util/: json.py  logger.py  (+1 more)
pipelines/: ambev-engenharia-cloud-hoop-prd-agents-for-prd.json  ambev-engenharia-cloud-hoop-stg-agents.json
src/: config.py  env.py  pipeline.py  runner.py  scope.py
(+58 files in other folders)
