[project]
name = "PipelineRunner"
version = "0.2.3"
description = "Triggering Azure Pipeline executions in batch"
authors = [
    {name = "Gabriel Richter",email = "gabrielrih@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]
packages = [{ include = "pipelinerunner" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
pipeline = "pipelinerunner.main:main"
